one other than supergash could do any control operations.  The admin
persona console permissions checkboxes now properly control the
server's response to admin console operations.

Admins other than supergash and monitor will need to log into the
server via the admin console using their full persona name.. i.e.,
'broccol:GASH Admin'.

9. [DOCUMENTATION] Revised, improved the install guide

Significantly revised and enhanced the install guide, corrected some
mistakes, included information on the use of installWeb.

The text INSTALL file is now a lynx-generated version of the HTML
file.. it was too much work and too error-prone trying to maintain
both independently.

-------------------- Changes from 0.99.2 to 0.99.3 -------------------

RELEASE DATE: June 23, 1999

1. [SERVER] Fixed value() in StringDBField.java

The value() method in StringDBField.java was improperly forcing
a permissions check, despite the fact that value() was used for
server-side code only.

This was causing a problem at transaction commit-time under certain
conditions, caused by the PermMatrix.union() bug below.

2. [SERVER] Fixed bugs in permissions system

Ugh, I had screwed up PermMatrix.union() in 0.99.2, the object->field
inheritance logic wasn't working properly.

I fixed PermMatrix.union(), simplified GanymedeSession.getPerm(), and
modified both PermEntry.union() and PermEntry.intersection() to optimize
out a lot of new PermEntry creation.

-------------------- Changes from 0.99.1 to 0.99.2 -------------------

RELEASE DATE: June 18, 1999

1. [DOCUMENTATION] Seriously Improved Javadocs

Lots more improvements to the source code javadocs.  Improving the
javadocs is an ongoing project.. I really want to make it possible to
get a very good feel for how the entire system works on a technical
level by simply browsing through the javadocs.  It's an interesting
exercise, and a continuing one.  If you find yourself puzzling about