@@ -17,6 +17,7 @@
 
     <UL>
     <LI><a href="../README">README</a></LI>
+    <LI><a href="../FAQ">FAQ</a></LI>
     <LI><a href="../CHANGES">CHANGE LOG</A></LI>
     <LI><a href="../INSTALL">INSTALL</a> (<a href="install.html">HTML version</a>)</LI>
     <LI><a href="../CREDITS">CREDITS</a></LI>
