@@ -294,7 +294,7 @@
     Apply the preference changes, and restart the browser.  The
     Ganymede Plug-In clients should work properly now.</p>
 
-    <p><b>IMPORTANT NOTE<b>: whenever you run applets using the Java
+    <p><b>IMPORTANT NOTE</b>: whenever you run applets using the Java
     Plug-In, the applets can only run as long as the log-in applet is
     still displayed in the web browser.  If you close the main browser
     window or click to a different page (either by following a link or
@@ -499,7 +499,7 @@
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- Created: Thu May 27 16:58:48 CDT 1999 -->
     <!-- hhmts start -->
-Last modified: Thu Jul  8 21:49:34 CDT 1999
+Last modified: Thu Jul  8 23:50:06 CDT 1999
 <!-- hhmts end -->
   </body>
 </html>
